Finish acceptor defn; more knapsack; fixes

--- a/thesis.bib
+++ b/thesis.bib
@@ -202,3 +202,13 @@ archivePrefix = "arXiv",
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
 } 
+
+@article{Bondarenko:heisenberg,
+  author  = {I. Bondarenko, R. Kravchenko},
+  title   = {Finite-state self-similar actions of nilpotent groups},
+  journal = {Geometriae Dedicata},
+  year    = 2013,
+  volume  = 163,
+  number  = {1},
+  pages   = {339--348}
+}
