--- a/thesis.sty
+++ b/thesis.sty
@@ -3,6 +3,7 @@
 \RequirePackage{amssymb}
 \RequirePackage{amsmath}
 \RequirePackage{etoolbox}
+\RequirePackage{stackrel}
 \RequirePackage[final]{pdfpages}
 \RequirePackage{pgf, tikz}
 \usetikzlibrary{arrows, automata}
