--- a/thesis.tex
+++ b/thesis.tex
@@ -17,8 +17,8 @@ Bergeron \& Klaus Sutner}} \date{May 5, 2017}
   induced by invertible Mealy machines. Notably, we present proof
   that, in the Abelian case, the automorphism membership problem is
   decidable in these semigroups. In addition, we prove the
-  undecidability of a Knapsack variant. A discussion of iteration and
-  orbit rationality follows.
+  undecidability of a Knapsack variant. Partial work toward the
+  decidability of the IsGroup problem is discussed.
 \end{abstract}
 % \newpage
 
