--- a/figures/a32-extended.tex
+++ b/figures/a32-extended.tex
@@ -28,10 +28,10 @@
 \State[2]{(4,0)}{two}
 \State[1]{(0,0)}{one}
 
-\ArcL{two}{one}{0/0}
+\ArcL{two}{one}{a/a}
 \ArcL{zero}{two}{1/0}
-\ArcL{zero}{one}{0/0}
-\ArcL{one}{zero}{0/0}
+\ArcL{zero}{one}{0/1}
+\ArcL{one}{zero}{a/a}
 
 \end{VCPicture}}
 
