--- a/thesis.bib
+++ b/thesis.bib
@@ -11,12 +11,17 @@
   pages   = {293--313}
 }
 
-% TODO finish
-@ARTICLE{sutner:coords,
-  author = {K. Sutner},
-  title = {Invertible Transducers, Iterations and Coordinates},
-  journal = {TODO},
-  year = {2013},
+@article{latimer:corresp,
+ ISSN = {0003486X},
+ URL = {http://www.jstor.org/stable/1968204},
+ author = {Claiborne G. Latimer and C. C. MacDuffee},
+ journal = {Annals of Mathematics},
+ number = {2},
+ pages = {313-316},
+ publisher = {Annals of Mathematics},
+ title = {A Correspondence Between Classes of Ideals and Classes of Matrices},
+ volume = {34},
+ year = {1933}
 }
 
 @PhdThesis{okano:thesis,
