--- a/thesis.tex
+++ b/thesis.tex
@@ -463,7 +463,8 @@ residual matrix, $A$ satisfies the following properties:
 \end{enumerate}
 \end{theorem}
 
-The Latimer and MacDuffee theorem states that:
+The Latimer and MacDuffee proved the following theorem in
+\cite{latimer:corresp}:
 
 \begin{theorem}
   If $p(x) \in \Z[x]$ is monic and irreducible, the $GL(m, \Z)$
