Fix Okano citation

--- a/thesis.bib
+++ b/thesis.bib
@@ -24,13 +24,12 @@
  year = {1933}
 }
 
-@PhdThesis{okano:thesis,
+@unpublished{okano:thesis,
   author = {T. Okano},
   title =  {Invertible Binary Transducers and Automorphisms of the Binary Tree},
-  school = {Carnegie Mellon University},
+  note = {Honors Thesis, Carnegie Mellon University},
   year =   2015,
   month =  {May},
-  annote = {okano}
 }
 
 @Book{NekrashevychSidki04:automorphisms,
