--- a/thesis.bib
+++ b/thesis.bib
@@ -216,3 +216,16 @@ archivePrefix = "arXiv",
   number  = {1},
   pages   = {339--348}
 }
+
+@InCollection{Sutner13:invertible_coordinates,
+  author =       "K. Sutner",
+  title =        "Invertible Transducers, Iteration and Coordinates",
+  booktitle =    "CIAA",
+  series =       "LNCS",
+  editor =       "S. Konstantinidis",
+  publisher =    "Springer Berlin",
+  keyword =      "Computer Science",
+  pages =        "306--318",
+  volume =       "7982",
+  year =         "2013",
+}
