--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt, titlepage]{article}
-\usepackage[ugly]{thesis}
+\usepackage[pretty]{thesis}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 
 \definecolor{TODO}{HTML}{0000BB}
